<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayer.ArtistActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:layout_alignParentRight="true"
            android:textSize = "15sp"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/recents_activity_title" />

        <TextView
            android:id="@+id/playlists_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/playlist_activity_title" />

        <TextView
            android:id="@+id/artists_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/artist_activity_title" />

        <TextView
            android:id="@+id/albums_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/albums_activity_title" />

        <TextView
            android:id="@+id/genres_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight = "1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/genres_activity_title" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom = "16dp"
        android:textSize="15sp"
        android:text="@string/artists_text" />


</LinearLayout>
